--- a/views/jobDetails.handlebars
+++ b/views/jobDetails.handlebars
@@ -13,9 +13,9 @@
     </div>
     <br>
     <div class="form-group">
-        <label>API response code column name</label>
+        <label>API Job ID column name</label>
         <br>
-        <select id="response_code" name="response_code" aria-placeholder="Select response code column name" aria-required="true">
+        <select id="response_code" name="response_code" aria-placeholder="Select API Job ID column name" aria-required="true">
             {{#each header}}
             <option value="{{this}}">{{this}}</option>
             {{/each}}
