--- a/views/jobDetails.handlebars
+++ b/views/jobDetails.handlebars
@@ -1,4 +1,4 @@
-<h1>Add Job</h1>
+<h1>Add Job Details</h1>
 {{#if error}}<span>{{error}}</span>{{/if}}
 <form method="POST" action="submitted" enctype="multipart/form-data">
     <br>
