--- a/views/sheetDetails.handlebars
+++ b/views/sheetDetails.handlebars
@@ -1,5 +1,9 @@
 <h1>Add Sheet creds and Freshdesk API details</h1>
-{{#if error}}<span>{{error}}</span>{{/if}}
+{{#if error}}<div class="alert alert-dismissible alert-danger">
+  <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+  <strong>Oh snap!</strong> <a href="#" class="alert-link">{{error}}
+</div>
+{{/if}}
 <form method="POST" action="jobDetails" enctype="multipart/form-data">
     <br>
     <div class="form-group">
